# sample-apps

./: .gitignore  .travis.install-dependencies.sh  .travis.yml  README.md  copyright.txt  pom.xml  test-gh-pages.sh
Kaa Storm integration/: .gitignore  pom.xml
Kaa Storm integration/client/: pom.xml
Kaa Storm integration/server/: pom.xml
activationdemo/: pom.xml
activationdemo/assembly/: src-java.xml
activationdemo/resources/: active_device_conf.json  active_device_filter.json  all_devices_conf.json  inactive_device_filter.json  projects.xml
cassandra/: pom.xml
cassandra/assembly/: src-c.xml
cassandra/resources/: projects.xml
cassandra/source/c/: CMakeLists.txt  build.sh  config.cmake  default.nix
cassandrademo/: pom.xml
cassandrademo/assembly/: src-c.xml
cassandrademo/resources/: logSchema.json  projects.xml  sensor_per_date_cassandra_appender.json  sensor_per_region_cassandra_appender.json  sensor_per_row_cassandra_appender.json
cellmonitor/: .gitignore  import-summary.txt  pom.xml
cellmonitor/app/: build.gradle
cellmonitor/assembly/: src-android.xml  src-objc.xml  src.xml
cellmonitor/resources/: projects.xml
cellmonitor/source/: AndroidManifest.xml  build.xml
cityguide/: pom.xml
cityguide/assembly/: src-android.xml  src.xml
cityguide/resources/: projects.xml
cityguide/source/: .gitignore  AndroidManifest.xml  build.xml  lint.xml  proguard-project.txt  settings.gradle
citylights-controller/: pom.xml
citylights-controller/assembly/: src-java.xml
citylights-controller/resources/: projects.xml
common/: pom.xml
common/build-scripts/: CMakeLists.txt  build.bat  build.sh
common/c/targets/esp8266/: CMakeLists.txt  target.c  target.h  target_gpio_led.c
common/c/targets/esp8266/driver/: gpio.c  gpio.h  uart.c  uart.h
common/c/targets/esp8266/ld/: eagle.app.v6.ld
common/c/targets/posix/: CMakeLists.txt  target.h  target_gpio_led.c
configuration/: pom.xml
configuration/assembly/: src-c.xml  src-cpp.xml
configuration/resources/: config_schema.avsc  projects.xml
configuration/source/c/: CMakeLists.txt  config.cmake
configuration/source/c/src/: kaa_demo.c
configurationdemo/: pom.xml
configurationdemo/assembly/: src-c.xml  src-cpp.xml  src-java.xml  src-objc.xml
configurationdemo/resources/: config_data.json  projects.xml
configurationdemo/source/c/: CMakeLists.txt  README.txt  build.sh  default.nix
configurationdemo/source/c/src/: kaa_demo.c
configurationdemo/source/c/targets/cc32xx/: CMakeLists.txt  app.ld  cc32xx_support.c  target.h
configurationdemo/source/c/targets/x86-64/: CMakeLists.txt  target.h
connectedcar/: pom.xml
connectedcar/assembly/: src-c.xml
connectedcar/resources/: projects.xml
credentials/: pom.xml
credentials/assembly/: src-c.xml  src-cpp.xml  src-java-admin.xml  src-java.xml  src-objc.xml
credentials/resources/: projects.xml
credentialsdemo/: pom.xml
credentialsdemo/assembly/: src-c.xml  src-cpp.xml  src-java-admin.xml  src-java.xml  src-no-sdk.xml  src-objc.xml
credentialsdemo/resources/: projects.xml
datacollection/: pom.xml
datacollection/assembly/: src-objc.xml
datacollection/datacollection-demo/: pom.xml
datacollection/telemetry-monitor/: pom.xml
datacollectiondemo/: pom.xml
datacollectiondemo/assembly/: src-c.xml  src-cpp.xml  src-java.xml  src-objc.xml
datacollectiondemo/resources/: config_schema.avsc  config_schema_bkup.avsc  logSchema.json  logging_schema.avsc  projects.xml
datacollectiondemo/source/c/: CMakeLists.txt  build.sh
datacollectiondemo/source/c/src/: kaa_demo.c
doc/: search_dictionary.json
doc/Importing-application-into-IDE-guide/: index.md
doc/Sample-applications-directory-structure/: index.md
doc/Welcome-Home/: index.md
dummy/: pom.xml
econais/: pom.xml
econais/ec19d/: pom.xml
event/: pom.xml
event/assembly/: src-android.xml  src-c.xml  src-cpp.xml
event/resources/: chatEventClassFamily.json  projects.xml
eventdemo/: pom.xml
eventdemo/assembly/: src-android.xml  src-c.xml  src-cpp.xml  src-java.xml  src-objc.xml
eventdemo/resources/: chat_event_class_event.avsc  chat_event_class_message.avsc  event_schema.avsc  projects.xml  thermostatEventClassFamily.json
fwupdate/: pom.xml
fwupdate/resources/: config_schema.avsc  profile_filters.txt  profile_schema.avsc  projects.xml
gh-pages-stub/: _config.yml
gh-pages-stub/_data/: permanent_config.yml
gh-pages-stub/_scripts/: create_global_toc.rb  generate_latest_structure.rb  tst_deploy.sh
gpiocontrol/: .gitignore  pom.xml  pom.xml~
gpiocontrol/source/c/: CMakeLists.txt  build.sh  config.cmake
gpiocontrol/source/c/src/: kaa_demo.c
gpiocontrol/source/cc32xx/targets/cc32xx/: CMakeLists.txt  app.ld  cc32xx_support.c  target.h
iotworld/: pom.xml
kafkaconsumerdemo/: pom.xml
notification/: pom.xml
notification/source/cpp/: CMakeLists.txt  README.txt  config.cmake  default.nix
notification/source/cpp/src/: KaaDemo.cpp
notificationdemo/: pom.xml
notificationdemo-android/: pom.xml
notificationdemo/source/c/: CMakeLists.txt  README  README.txt  build.sh
notificationdemo/source/c/src/: kaa_demo.c
ota/: pom.xml
ota/source/cc32xx/: CMakeLists.txt  README  README.md  README.txt  build.sh
ota/source/cc32xx/platform/cc32xx/: cc32xx.cmake  cc32xx_support.c  cc32xx_support.h
ota/source/cc32xx/src/: kaa_demo.c
photoframe/: pom.xml
powerplant/: pom.xml
powerplant-android/: pom.xml
powerplant-couchbase-proxy/: pom.xml
powerplant-dashboard/: pom.xml
profiling/: pom.xml
profilingdemo/: pom.xml
profilingdemo/source/cpp/: CMakeLists.txt  build.bat  build.sh
profilingdemo/source/cpp/src/: KaaDemo.cpp
robotrun/: pom.xml
sandbox-builder-parent/: pom.xml  template_pom.xml
smarthouse/: pom.xml
smarthousedemo/: pom.xml
spark/: pom.xml
sparkdemo/: pom.xml
storm/: pom.xml
stormdemo/: pom.xml
twitterled/: pom.xml
vehicletelemetry/: pom.xml
verifiers/: pom.xml
verifiersdemo/: pom.xml
verifiersdemo/source/c/: CMakeLists.txt  build.sh
verifiersdemo/source/c/src/: kaa_demo.c
zeppelin/: pom.xml
zeppelindemo/: pom.xml
(+1739 files in other folders)
